backend/kubernetes/auth-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: auth
  labels:
    app: auth
spec:
  containers:
    - image: stelioszlat/auth:1.0.0
      name: auth
