backend/kubernetes/core-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-deployment
  labels:
    app: core-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: core-deployment
  template:
    metadata:
      labels:
        app: core-deployment
    spec:
      containers:
      - name: core
        image: stelioszlat/core:1.0.0
        ports:
        - containerPort: 8087
