backend/kubernetes/core-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: core
  labels:
    app: core
spec:
  containers:
    - image: stelioszlat/core:1.0.0
      name: core
