backend/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdfshare-deployment
  labels:
    app: pdfshare
spec:
  replicas: 2
  selector:
    matchLabels:
      app: core
