backend/kubernetes/extra-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extra-deployment
  labels:
    app: extra-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: extra-deployment
  template:
    metadata:
      labels:
        app: extra-deployment
    spec:
      containers:
      - name: extra
        image: stelioszlat/extra:1.0.0
        ports:
        - containerPort: 8087
