backend/kubernetes/extra-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: extra
  labels:
    app: extra
spec:
  containers:
    - image: stelioszlat/extra:1.0.0
      name: extra
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
