backend/kubernetes/queue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queue
  template:
    metadata:
      labels:
        app: queue
    spec:
      containers:
        - name: queue
          image: stelioszlat/queue:1.0.0
          ports:
            - containerPort: 5672 # AMQP
            - containerPort: 15672
