backend/kubernetes/core-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-service
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: core
