backend/kubernetes/extra-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: extra-service
spec:
  ports:
  - port: 80
    targetPort: 8081
  selector:
    app: extra
