backend/kubernetes/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
    - port: 27018
      targetPort: 27018
  selector:
    app: mongo
