backend/kubernetes/queue-management.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 15672
      targetPort: 15672
      nodePort: 30000
