backend/kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache
spec:
  type: ClusterIP
  ports:
  - name: server
    port: 6379
    targetPort: 6379
  selector:
    app: cache
