backend/kubernetes/pdfshare-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdfshare-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - pdfshare.io
      secretName: pdfshare-tls
  rules:
    - host: pdfshare.io
      http:
        paths:
          - path: /api/metadata
            pathType: Prefix
            backend:
              service:
                name: core-service
                port:
                  number: 80
          - path: /api/search
            pathType: Prefix
            backend:
              service:
                name: core-service
                port:
                  number: 80
          - path: /api/extra
            pathType: Prefix
            backend:
              service:
                name: extra-service
                port:
                  number: 80
